--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}首页_36氪{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='home/css/reset.css', _external=True) }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='home/plugs/layui/css/layui.css', _external=True) }}">
     <link rel="stylesheet" href="{{ url_for('static',filename='home/css/common.css', _external=True) }}">
